<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/app_menu_newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dip"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/start_new_button"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_menu_newgame" />

    <Button
        android:id="@+id/highscores_button"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_menu_highscores" />

    <Button
        android:id="@+id/about_button"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_menu_about" />

</LinearLayout>